--- a/GoogleImageSearcher/res/values/strings.xml
+++ b/GoogleImageSearcher/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="image_title_label">Image Title</string>
     <string name="image_details_activity_label">Image Details</string>
     <string name="action_settings">Settings</string>
+    <string name="share_label">Share</string>
     <string name="title_activity_search_filters">Advanced Filters</string>
     <string name="search_options_label">Advanced Search Options</string>
     <string name="image_size_label">Image Size</string>
@@ -16,6 +17,7 @@
     <string name="image_type_label">Image Type</string>
     <string name="site_filter_label">Site Filter</string>
     <string name="save_button_label">Save</string>
+    <string name="cancel_button_label">Cancel</string>
 
     <string-array name="image_size_options">
         <item>small</item>
